# note-assistant

./: .gitignore  LICENSE  README.md  build_app.sh  config.example.yaml  pyproject.toml  setup_mac.sh
media/: NoteAssistant.icns
note_assistant/: __init__.py  __main__.py  _speech_worker.py  app.py  audio_capture.py  config.py  errors.py  notes_writer.py  recorder.py  summarizer.py  transcriber.py  ui.py
scripts/: build_app.sh  setup_mac.sh
tests/: conftest.py  test_app.py  test_config.py  test_errors.py  test_notes_writer.py  test_recorder.py  test_summarizer.py  test_transcriber.py  test_ui.py
