[project]
name = "note-assistant"
version = "0.1.0"
description = "Live audio transcription and summarization to Apple Notes"
requires-python = ">=3.11"
dependencies = [
    "sounddevice>=0.4.6",
    "numpy>=1.26",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.0",
    "textual>=0.60",
    "faster-whisper>=1.0",
    "ollama>=0.2",
    "librosa>=0.10",
    "pyobjc-core>=12.1; sys_platform == 'darwin'",
    "pyobjc-framework-Speech>=12.1; sys_platform == 'darwin'",
    "pyobjc-framework-AVFoundation>=12.1; sys_platform == 'darwin'",
    "mlx>=0.31.2; sys_platform == 'darwin'",
    "mlx-lm>=0.31.3; sys_platform == 'darwin'",
    "apple-fm-sdk>=0.1.1; sys_platform == 'darwin'",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
note-assistant = "note_assistant.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["note_assistant"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
